fix: cards overlapping footer

--- a/src/components/landpage/team-card/styles.module.scss
+++ b/src/components/landpage/team-card/styles.module.scss
@@ -3,7 +3,6 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  z-index: 3;
 
   .flipCard {
     position: relative;
